# axia

./: .env.example  .gitignore  Caddyfile  LICENSE  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml
data/: README.md
data/atlas_indexes/: pca_64_vector_search.json
data/ingest/: build_qna_dataset.py  compute_embeddings.py  download_from_csc.py  dump_full_corpus.py  extract_sample_from_atlas.py  load_from_huggingface.py  load_into_mongo.py  merge_dump.py  push_to_huggingface.py  run_full_corpus.py  sample_csc_index.json
data/samples/: sample_corpus.json  sample_metadata_records.json
docs/: 01_overview.md  02_multi_agent_workflow.md  03_event_analyst_model.md  04_spectral_metrics.md  05_neighbor_analysis.md  06_frontend.md  07_dataset.md  08_deployment.md
model/eval/: README.md  xray_testsuite.py
model/projector/: main.py  (+4 more)
scripts/: deploy-init.sh  setup.sh  verify.sh
service/: Dockerfile  env.example  main.py  pyproject.toml  requirements.txt
service/src/agents/: critic.py  event_analysis.py  infer.py  moderator.py  neighbor.py  state.py  tool_agent.py  workflow.py
service/src/api/: _task_manager.py  chat.py  models.py  object_details.py  validate.py
service/src/core/: logger.py  settings.py
service/src/db/: mongo.py
service/src/llm/: openai_client.py  openai_infer.py  qwen_xray_client.py  validate.py
service/src/spectrum/: de_dt_map.py  snapshot.py
side_studies/: README.md
webapp/: .dockerignore  Dockerfile  eslint.config.mjs  example.env.local  next.config.js  package.json  postcss.config.js  tailwind.config.ts  tsconfig.json
(+151 files in other folders)
