[tool.poetry]
name = "axia-service"
version = "1.0.0"
description = "Axia multi-agent orchestrator for X-ray source decoding."
authors = ["Axia Authors"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
python-multipart = "^0.0.9"
pydantic = "^2.7.0"
pydantic-settings = "^2.5.0"
python-dotenv = "^1.0.1"
python-json-logger = "^2.0.7"
loguru = "^0.7.2"

# Mongo
pymongo = "^4.10.0"

# HTTP
aiohttp = "^3.10.0"
httpx = "^0.27.0"
requests = "^2.32.0"
tenacity = "^9.0.0"

# OpenAI
openai = "^1.50.0"

# YAML for tool definitions
pyyaml = "^6.0.2"

# Scientific stack used by the spectrum processor
numpy = "^1.26.4"
pandas = "^2.2.2"
scipy = "^1.13.0"
scikit-learn = "^1.5.0"
matplotlib = "^3.9.0"
astropy = "^6.1.0"
pyvo = "^1.5.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
ruff = "^0.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]
